# pyref

./: .csv  .gitignore  .gitmodules  .pypirc  .release-please-manifest.json  .travis.yml  AGENTS.md  AUTHORS.rst  CHANGELOG.md  CLAUDE.md  CONTRIBUTE.md  CONTRIBUTING.rst  Cargo.toml  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  ReflPlotting.ipynb  Untitled Diagram.drawio  _image_masking.py  build_rs_cov.profraw  cz.toml  optical_constants.csv  processing.ipynb  prototype.ipynb  prsoxr_loader_ALS.py  pyproject.toml  release-please-config.json  requirements.txt  setup.cfg  setup.py  struct.json  test.csv  test.ipynb  tox.ini  vscode.env  xrr_script_gen.ipynb
.cargo/: config.toml
.comments/: comments.json
.cursor/.dotagents/: stacks.json
.cursor/agents/: python-refactor.md  python-reviewer.md  python-types.md
.cursor/rules/: clarify-first-prompting.mdc  cursor-agent-orchestration.mdc  cursot-tools-mastery.mdc  python-base.mdc
.github/: ISSUE_TEMPLATE.md  release-drafter-python.yaml  release-drafter.yml
.github/workflows/: ci.yml  lint-format.yml  publish.yml  ruff.yml  rust.yml
UnitTests/: xrrUnitTest.py
docs/: 275.0_model.csv  280.0_model.csv  281.0_model.csv  282.0_model.csv  282.3_model.csv  282.7_model.csv  283.1_model.csv  283.7_model.csv  284.0_model.csv  Basic_PRSOXR_runfile.py  FittingFull.ipynb  FittingMonoLayer.ipynb  FittingSP.ipynb  Makefile  NovBeamTime.ipynb  NovPresentation.ipynb  OrientedOpticalConstants.ipynb  Outline.md  README.md  ReflPlotting.ipynb  RoomTempFitting.ipynb  ScriptGen.ipynb  conf.py  database.ipynb  index.rst  installation.rst  make.bat  model_fit_script.py  molecular_orentation.ipynb  prototype.ipynb  showresults.ipynb  testing.ipynb  usage.rst  visualizations.ipynb  znpc_mono_layer.pkl
docs/documentation/: Normalization.md
docs/plans/: ingest-streaming-and-maintainability.md
docs/prototyping/: README.md  comprehensive_implementation_plan.md  development_documentation_guidelines.md
docs/xrr_notebooks/: .gitmodules
migrations/2026-04-08-200000_initial_catalog/: down.sql  up.sql
migrations/2026-04-08-210000_files_primary_hdu_geometry/: down.sql  up.sql
migrations/2026-04-17-120000_frames_zarr_shape_bucket/: down.sql  up.sql
migrations/2026-04-20-140000_frames_drop_zarr_shape_bucket/: down.sql  up.sql
migrations/2026-04-21-090000_header_values_frames_prune/: down.sql  up.sql
notebooks/: als-beamline-scripts.ipynb  beamtime_collins_2026feb copy.ipynb  beamtime_collins_2026feb.ipynb  catalog_local_structure_qc.ipynb  nexafs-ingest.ipynb  nexafs-plotting.ipynb  nexafs-process.ipynb  nsls_ii.ipynb  sst1-dashboard.ipynb
processing/: ooc.ipynb  processing.ipynb
prsoxs_xrr/: ..json  __init__.py  cli.py  processing.ipynb  prsoxs_xrr.py  xrr.py  xrr_reduction.py  xrr_script_gen.ipynb  xrr_sorter.py  xrr_toolkit  xrr_toolkit.py
prsoxs_xrr/GUI/: xrr_app.py
pyref-ccd-subtree/: Cargo.toml  cz.toml
pyref-ccd-subtree/src/: loader.rs
python/pyref/: __init__.py  _config.py  exceptions.py  image.py  ingest_profile.py  load_fits.py  loader.py  masking.py  prsoxr_loader_ALS.py  refl_manager.py  refl_reuse.py  runfile.py  sorter.py  test.ipynb  test.py  toolkit.py  types.py  widget.py  xrr.py
reflutils/: __init__.py  data_sorter.py  image_manager.py  load_fits.py  refl_manager.py  refl_reuse.py  xrr.py
scripts/: _ingest_profile.py  bench_ingest.py  profile_beamtime_ingest.py  run_nexafs_pipeline.py  write_minimal_fits.py
src/: BareSiFitting.ipynb  BasicFittingProcess.ipynb  Basic_PRSOXR_runfile.py  BeamAnalysis.ipynb  CCDStats.ipynb  FileSorting.ipynb  NovBeamTime.ipynb  NovPresentation.ipynb  ReflPlotting.ipynb  ReflWidget.ipynb  RoomTempFitting.ipynb  ScriptGen.ipynb  beamfinding.rs  colormap.rs  core_rust.rs  enums.rs  errors.rs  fitting.ipynb  gaussian_fit.rs  io.rs  lib.rs  loader.rs  main.rs  mod.rs  path_policy.rs  py_modules.rs  refl.rs  runfile.py  schema.rs  test.fits
src/catalog/: beamspot_qc.rs  beamtime_index.rs  db.rs  explorer_query.rs  ingest.rs  ingest_parallel.rs  ingest_progress.rs  layout.rs  materialize.rs  mod.rs  models.rs  parallelism.rs  paths.rs  profile_persist.rs  query.rs  reflectivity_profile.rs  scan_scheduler.rs  watch.rs  zarr_write.rs
src/ccd/: lib.rs  mod.rs
src/experiment/: mod.rs
src/fits/: error.rs  hdulist.rs  header.rs  image.rs  mod.rs  primary.rs  utils.rs
src/io/: blur.rs  image_mmap.rs  metadata.rs  mod.rs  options.rs  raw_pixels.rs  schema.rs  source.rs  zarr_store.rs
src/loader/: mod.rs
src/modeling/: __init__.py
src/pyref/: __init__.py  image_manager.py  load_fits.py  refl_manager.py  sorter.py  themes.mplstyle  xrr.py
src/refl/: ZnPc82862-00001.fits  core_rust.rs  mod.rs  test.ipynb
src/reflutils/: __init__.py  _config.py  _optical_model.py  data_sorter.py  display_path.py  image_manager.py  load_fits.py  refl_manager.py  (+3 more)
test/: test2.fits
tests/: ZnPc82862-00002.fits  ZnPc82862-00003.fits  ZnPc82862-00004.fits  ZnPc82862-00005.fits  ZnPc82862-00006.fits  ZnPc82862-00007.fits  ZnPc82862-00008.fits  ZnPc82862-00009.fits  ZnPc82862-00010.fits  ZnPc82862-00011.fits  ZnPc82862-00012.fits  ZnPc82862-00013.fits  ZnPc82862-00014.fits  ZnPc82862-00015.fits  ZnPc82862-00016.fits  ZnPc82862-00017.fits  ZnPc82862-00018.fits  ZnPc82862-00019.fits  ZnPc82862-00020.fits  ZnPc82862-00021.fits  ZnPc82862-00022.fits  ZnPc82862-00023.fits  ZnPc82862-00024.fits  ZnPc82862-00025.fits  ZnPc82862-00026.fits  ZnPc82862-00027.fits  ZnPc82862-00028.fits  ZnPc82862-00029.fits  ZnPc82862-00030.fits  ZnPc82862-00031.fits  ZnPc82862-00032.fits  ZnPc82862-00033.fits  ZnPc82862-00034.fits  ZnPc82862-00035.fits  ZnPc82862-00036.fits  ZnPc82862-00037.fits  ZnPc82862-00038.fits  ZnPc82862-00039.fits  ZnPc82862-00040.fits  ZnPc82862-00041.fits  (+273 more)
xrr/: Py_xrr.py  __init__.py  _beam_spot_filter.py  _config.py  _data_sorter.py  _image_manager.py  _load_fits.py  _refl_manager.py  _toolkit.py  data_sorter.py  find_max_index.c  image_manager.py  load_fits.py  refl_manager.py  refl_outlier_rejection.py  refl_reuse.py  sorter.py  test_losd_fits.py  toolkit.py  xrr.py  xrr_sorter.py
(+1647 files in other folders)
