[package]
name = "pyref_rs"
version = "0.1.0"
edition = "2021"
authors = ["Harlan Heilman <Harlan.Heilman@wsu.edu>"]
description = "Enable running pyref workloads in Python"
documentation = "https://docs.rs/pyref/latest"
license = "GPL-3.0"
repository = "https://github.com/WSU-Carbon-Lab/pyref"

[lib]
crate-type = ["cdylib", "rlib"]
name = "pyref"
path = "src/lib.rs"

[[bin]]
name = "pyref-tui"
path = "src/bin/pyref_tui.rs"
required-features = ["tui"]

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm", "dep:toml"]

[dependencies]
astrors-fork = "0.1.10"
regex = "1.10"
chrono = "0.4.39"
glob-match = "0.2.1"
ndarray = "0.15.6"
numpy = "0.22.0"
physical_constants = "0.5.0"
polars = {version = "0.45.1", features = ["fmt", "dtype-u16", "lazy", "dtype-struct", "dtype-array", "dtype-datetime", "round_series", "ipc", "performant"]}
pyo3 = {version = "0.22.0", features = ["extension-module", "generate-import-lib", "abi3", "abi3-py312"]}
pyo3-polars = {version = "0.19.0", features = ["lazy", "dtype-struct", "derive"]}
rayon = "1.10.0"
serde = {version = "1.0", features = ["derive"]}
thiserror = "2.0.11"
ratatui = {version = "0.29", optional = true, features = ["crossterm"]}
crossterm = {version = "0.28", optional = true}
toml = {version = "0.8", optional = true}

[dev-dependencies]
tempfile = "3.10.1"
rstest = "0.18.2"
predicates = "3.1.0"
