[project]
authors = [
  {name = "Harlan", email = "Harlan.Heilman@wsu.edu"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Development Status :: 4 - Beta",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
]
dependencies = [
  "periodictable>=2.0.0",
  "numpy>=1.21.0",
  "numba>=0.57.0",
  "pandas>=1.3.0",
  "polars>=0.19.0",
  "matplotlib>=3.5.0",
  "scipy>=1.7.0",
  "scikit-learn>=1.0.0",
  "scikit-image>=0.24.0",
  "fastparquet>=2024.5.0",
  "pyarrow>=17.0.0",
  "refnx[all]>=0.1.52",
  "seaborn>=0.13.2",
  "astropy>=6.0.1",
]
description = "Blazingly fast X-ray reflectivity data analysis package"
keywords = ["X-ray", "reflectivity", "data", "analysis"]
license = {file = "LICENSE"}
maintainers = [
  {name = "Harlan", email = "Harlan.Heilman@wsu.edu"},
]
name = "pyref"
readme = "README.md"
requires-python = ">=3.12"
urls = {Documentation = "https://wsu-carbon-lab.github.io/pyref/", Source = "https://github.com/WSU-Carbon-Lab/pyref"}
version = "0.8.0"

[project.optional-dependencies]
dev = [
  "ruff>=0.11.0",
  "mypy>=1.15",
]
fitting = [
  "emcee>=3.1.6",
  "arviz>=0.21.0",
  "corner>=2.2.3",
]
jupyter = [
  "jupyter>=1.1.1",
  "notebook>=7.4.2",
  "ipywidgets>=8.1.3",
  "ipympl>=0.9.4",
  "hvplot>=0.11.2",
]
cuda = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", extra = "cuda" },
]
torchvision = [
  { index = "pytorch-cu128", extra = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module", "pyo3/generate-import-lib"]
format = ["wheel"]
minimum-python-version = "3.9"
module-name = "pyref"
profile = "release"
python-source = "python/"
sdist-generate = false
strip = true
universal2 = true

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[tool.ruff]
exclude = [
  ".github",
  ".git",
  ".vscode",
  ".venv",
  "docs",
  "src",
]
fix = true
line-length = 88

[tool.ruff.lint]
ignore = ["D200"]
select = [
  "E", # pycodestyle
  "W", # pycodestyle
  "F", # Pyflakes
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "D", # flake8-docstrings
  "I", # isort
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "UP", # pyupgrade
  "PT", # flake8-pytest-style
  "RUF", # Ruff-specific rules
  "PTH", # flake8-use-pathlib
  "FA", # flake8-future-annotations
  "PIE", # flake8-pie
  "TD", # flake8-todos
  "TRY", # tryceratops
  "EM", # flake8-errmsg
  "FBT001", # flake8-boolean-trap
]
[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.format]
docstring-code-format = true

[tool.commitizen]
major_version_zero = true
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "pep621"
version_scheme = "pep440"

[dependency-groups]
dev = [
  "ruff>=0.9.4",
]

[package.metadata.maturin]
compatibility = ["manylinux_2_28_x86_64", "musllinux_1_2_x86_64"]
features = ["pyo3/extension-module"]
python-source = "python"
