[project]
authors = [
  {name = "Harlan", email = "Harlan.Heilman@wsu.edu"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Development Status :: 4 - Beta",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
]

description = "Blazingly fast X-ray reflectivity data analysis package"
keywords = ["X-ray", "reflectivity", "data", "analysis"]
license = {file = "LICENSE"}
maintainers = [
  {name = "Harlan", email = "Harlan.Heilman@wsu.edu"},
]
name = "pyref"
readme = "README.md"
requires-python = ">=3.12"
urls = {Documentation = "https://wsu-carbon-lab.github.io/pyref/", Source = "https://github.com/WSU-Carbon-Lab/pyref"}
version = "0.8.2"
dependencies = [
    "arviz>=0.21.0",
    "astropy>=7.2.0",
    "fastparquet>=2024.11.0",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.0",
    "pandas>=2.2.3",
    "periodictable>=2.0.2",
    "pint>=0.24.4",
    "pyarrow>=18.0.0",
    "polars>=1.29.0",
    "pytest>=9.0.2",
    "refnx>=0.1.57",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sigfig>=1.3.19",
    "sympy>=1.14.0",
    "xarray>=2025.4.0",
    "jupyter-bokeh>=4.0.5",
    "uncertainties>=3.2.3",
    "ezfit>=0.1.5",
    "scienceplots>=2.2.1",
    "datasets>=4.6.0",
    "huggingface-hub>=1.5.0",
    "tiled>=0.2.8",
    "ipyaggrid>=0.5.4",
    "altair>=6.0.0",
    "panel>=1.8.5",
    "tqdm>=4.67.1",
    "rich>=14.3.3",
    "typer>=0.24.1",
    "tomli-w>=1.2.0",
]

[project.scripts]
pyref = "pyref.cli.main:main"
pyref-ingest = "pyref.cli.main:main_ingest_shim"

[tool.maturin]
bindings = "pyo3"
features = ["extension-module", "parallel_ingest", "zarr", "watch"]
format = ["wheel"]
minimum-python-version = "3.12"
module-name = "pyref"
profile = "release"
python-source = "python/"
sdist-generate = false
strip = true
universal2 = true

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[tool.ty]
# First-party modules live under python/; Rust sources under src/ are not Python roots.
[tool.ty.environment]
python-version = "3.12"
root = ["python"]

[tool.ty.analysis]
# Native extension module generated by maturin; treat symbols as ``Any`` for checking.
replace-imports-with-any = ["pyref.pyref"]

[tool.ty.src]
include = ["python/pyref"]
exclude = ["python/pyref/beamline/**"]

[tool.ty.terminal]
output-format = "github"

# Fitting stack is refnx/numpy-heavy; relax a few rules until annotations catch up.
[[tool.ty.overrides]]
include = ["python/pyref/fitting/**"]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"
invalid-method-override = "ignore"
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["python/pyref/io/beamtime.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"

[tool.ruff]
exclude = [
  ".github",
  ".git",
  ".vscode",
  ".venv",
  "docs",
  "src",
  "notebooks",
  "tests",
  "python/pyref/beamline",
]
fix = true
line-length = 88

[tool.ruff.lint]
ignore = ["D200"]
select = [
  "E", # pycodestyle
  "W", # pycodestyle
  "F", # Pyflakes
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "D", # flake8-docstrings
  "I", # isort
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "UP", # pyupgrade
  "PT", # flake8-pytest-style
  "RUF", # Ruff-specific rules
  "PTH", # flake8-use-pathlib
  "FA", # flake8-future-annotations
  "PIE", # flake8-pie
  "TD", # flake8-todos
  "TRY", # tryceratops
  "EM", # flake8-errmsg
  "FBT001", # flake8-boolean-trap
]
[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.per-file-ignores]
"python/pyref/cli/**/*.py" = [
  "B008",
  "B904",
  "E501",
  "EM101",
  "EM102",
  "FBT001",
  "RUF005",
  "SIM105",
  "TC001",
  "TC003",
  "TRY003",
  "TRY401",
  "W505",
]

[tool.ruff.format]
docstring-code-format = true

[tool.commitizen]
major_version_zero = true
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "pep621"
version_scheme = "pep440"

[tool.uv]
compile-bytecode = true
default-groups = ["jupyter", "torch"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[package.metadata.maturin]
features = ["extension-module"]
python-source = "python"

[dependency-groups]
dev = [
    "maturin>=1.11.5",
    "nbconvert>=7.17.0",
    "patchelf>=0.17.2.2",
    "ruff>=0.11.9",
    "ty>=0.0.29",
]
jupyter = [
    "bokeh>=3.7.3",
    "hvplot>=0.11.3",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
    "panel>=1.6.3",
    "watchfiles>=1.0.5",
]
nsls = [
    "dask>=2026.3.0",
    "pyhyperscattering[bluesky]>=0.2.10",
    "pyopencl>=2026.1.2",
    "zarr>=3.1.6",
]
torch = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]
